[gd_scene load_steps=5 format=2]

[ext_resource path="res://Cabin-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Cabin.tres" type="Theme" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[node name="Scene" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 3 )

[node name="Launch" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -60.0
margin_right = 250.0
margin_bottom = 60.0
theme = ExtResource( 2 )
text = "Launch"

[node name="Build" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = 85.0
margin_right = 250.0
margin_bottom = 205.0
theme = ExtResource( 2 )
text = "Build"

[node name="Label" type="Label" parent="."]
margin_left = 440.0
margin_top = 310.0
margin_right = 1515.0
margin_bottom = 430.0
custom_fonts/font = SubResource( 1 )
text = "sm64plus Godot Launcher"

[node name="RomSelector" type="FileDialog" parent="."]
margin_left = 174.0
margin_top = 134.0
margin_right = 808.0
margin_bottom = 442.0
window_title = "Select an sm64 US ROM."
mode_overrides_title = false
mode = 0
access = 2

[connection signal="pressed" from="Launch" to="." method="_on_Launch_pressed"]
[connection signal="pressed" from="Build" to="." method="_on_Build_pressed"]
[connection signal="file_selected" from="RomSelector" to="." method="_on_RomSelector_file_selected"]
[connection signal="popup_hide" from="RomSelector" to="." method="_on_RomSelector_popup_hide"]
